2006-08-03  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/seahorse-service-crypto.c:
    * daemon/seahorse-service-keyset.c:
    * daemon/seahorse-service.c:
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-default-key-control.c:
    * libseahorse/seahorse-default-key-control.h:
    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-key-source.c:
    * libseahorse/seahorse-key-source.h:
    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-key.h:
    * libseahorse/seahorse-keyset.c:
    * libseahorse/seahorse-ldap-source.c:
    * libseahorse/seahorse-notification.c:
    * libseahorse/seahorse-pgp-key.c:
    * libseahorse/seahorse-pgp-key.h:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-server-source.c:
    * libseahorse/seahorse-signer.c:
    * libseahorse/seahorse-ssh-key.c:
    * libseahorse/seahorse-ssh-key.h:
    * libseahorse/seahorse-ssh-operation.c:
    * libseahorse/seahorse-ssh-source.c:
    * libseahorse/seahorse-unknown-key.c:
    * libseahorse/seahorse-unknown-source.c:
    * libseahorse/seahorse-unknown-source.h:
    * libseahorse/seahorse-util.c:
    * src/seahorse-key-manager.c:
    * src/seahorse-key-properties.c:
    * src/seahorse-key-widget.c:
    * src/seahorse-keyserver-sync.c: Refactor keyids. Use GQuarks 
    instead of strings. Bug #347872 
    
2006-08-03  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-io.c: When comparing DISPLAY environment
    variable in seahorse-agent, don't compare 'screennumber'. 
    Patch by Sam Morris. Bug #156306
    
2006-07-28  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/seahorse-sharing.c:
    * libseahorse/seahorse-gtkstock.c:
    * libseahorse/seahorse-gtkstock.h:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-prefs.glade: Removed notification icon for 
    key sharing, added icon to prefs dialog.
    