@@ -19,3 +19,5 @@ compile
 seahorse-?.?.?
 junk
 gnome-doc-utils.make
+*.anjuta
+*.tasks
