@@ -1,4 +1,4 @@
-TODO (last updated 2005-10-06)
+TODO (last updated 2006-03-05)
 ==============================
 
 Seahorse TODO list. Also check bugzilla.gnome.org for more specific bugs & enhancements.
