@@ -16,3 +16,4 @@ seahorse-marshal.h
 *.rej
 xloadimage
 seahorse-ssh-askpass
+*.loT
