@@ -5,5 +5,6 @@ Makefile
 Makefile.in
 seahorse-pgp.gedit-plugin
 *.lo
+*.loT
 seahorse-gedit.schemas
 *.o
