@@ -25,7 +25,7 @@
       <property name="visible">True</property>
       <property name="show_help">False</property>
       <accessibility>
-	<atkproperty name="AtkObject::accessible_name" translatable="yes">keygen_druid</atkproperty>
+	<atkproperty name="AtkObject::accessible_name">keygen_druid</atkproperty>
       </accessibility>
       <signal name="cancel" handler="closed" last_modification_time="Wed, 31 Dec 2003 03:35:55 GMT"/>
 
@@ -337,7 +337,7 @@ Full Name (Comment) &lt;email address&gt;.</property>
 		      <property name="editable">True</property>
 		      <property name="visibility">True</property>
 		      <property name="max_length">0</property>
-		      <property name="text" translatable="yes"></property>
+		      <property name="text"></property>
 		      <property name="has_frame">True</property>
 		      <property name="invisible_char" translatable="yes">*</property>
 		      <property name="activates_default">False</property>
@@ -361,7 +361,7 @@ Full Name (Comment) &lt;email address&gt;.</property>
 		      <property name="editable">True</property>
 		      <property name="visibility">True</property>
 		      <property name="max_length">0</property>
-		      <property name="text" translatable="yes"></property>
+		      <property name="text"></property>
 		      <property name="has_frame">True</property>
 		      <property name="invisible_char" translatable="yes">*</property>
 		      <property name="activates_default">False</property>
@@ -462,7 +462,7 @@ You should pick a phrase that is easy to remember and contains punctuation. Take
 			  <property name="editable">True</property>
 			  <property name="visibility">False</property>
 			  <property name="max_length">0</property>
-			  <property name="text" translatable="yes"></property>
+			  <property name="text"></property>
 			  <property name="has_frame">True</property>
 			  <property name="invisible_char" translatable="yes">*</property>
 			  <property name="activates_default">False</property>
@@ -488,7 +488,7 @@ You should pick a phrase that is easy to remember and contains punctuation. Take
 			  <property name="editable">True</property>
 			  <property name="visibility">False</property>
 			  <property name="max_length">0</property>
-			  <property name="text" translatable="yes"></property>
+			  <property name="text"></property>
 			  <property name="has_frame">True</property>
 			  <property name="invisible_char" translatable="yes">*</property>
 			  <property name="activates_default">False</property>
