@@ -1,3 +1,7 @@
+2005-08-13  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * Merged changes from seahorse-0-8 branch.
+    
 2006-08-03  Nate Nielsen  <nielsen@memberwebs.com>
 
     * daemon/seahorse-service-crypto.c:
